--- a/src/layout/sidebar/index.scss
+++ b/src/layout/sidebar/index.scss
@@ -7,10 +7,11 @@
   display: flex;
   flex-direction: column;
   align-items: stretch;
-  box-shadow: 2px 0 8px rgba(0,0,0,0.08);
+  box-shadow: 2px 0 8px rgba(0, 0, 0, 0.08);
 }
 
 .sidebar-logo {
+  width: 219px;
   height: 60px;
   display: flex;
   align-items: center;
@@ -19,7 +20,7 @@
   font-size: 22px;
   font-weight: bold;
   letter-spacing: 2px;
-  background: #23272b;
+  background: #343a40 !important;
   color: #fff;
   border-bottom: 1px solid #4f5962;
 }
